MODON MRE BPDEV/force-app/main/default/objects/DocuSign_Automated_Config__mdt/DocuSign_Automated_Config__mdt.object-meta.xml
<CustomObject>
    <description>Stores configurations for automated DocuSign sending via Apex Queueables.</description>
    <label>DocuSign Automated Config</label>
    <pluralLabel>DocuSign Automated Configs</pluralLabel>
</CustomObject>