MODON MRE BPDEV/force-app/main/default/objects/DocuSign_Automated_Config__mdt/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <label>Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>