MODON MRE BPDEV/force-app/main/default/objects/DocuSign_Automated_Config__mdt/fields/Expire_After_Days__c.field-meta.xml
<CustomField>
    <fullName>Expire_After_Days__c</fullName>
    <label>Expire After (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>