MODON MRE BPDEV/force-app/main/default/objects/DocuSign_Automated_Config__mdt/fields/Recipient_Role__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Role__c</fullName>
    <label>Recipient Role</label>
    <length>255</length>
    <type>Text</type>
</CustomField>