MODON MRE BPDEV/force-app/main/default/objects/DocuSign_Automated_Config__mdt/fields/Remind_Frequency_Days__c.field-meta.xml
<CustomField>
    <fullName>Remind_Frequency_Days__c</fullName>
    <label>Remind Frequency (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>